@@ -580,7 +580,7 @@ public final class Lucene912PostingsReader extends PostingsReaderBase {
 
     @Override
     public int nextDoc() throws IOException {
-      if (doc == level0LastDocID) { // advance skip data on level 0
+      if (docBufferUpto == BLOCK_SIZE) { // advance skip data on level 0
         moveToNextLevel0Block();
       }
 
@@ -875,7 +875,7 @@ public final class Lucene912PostingsReader extends PostingsReaderBase {
 
     @Override
     public int nextDoc() throws IOException {
-      if (doc == level0LastDocID) { // advance level 0 skip data
+      if (docBufferUpto == BLOCK_SIZE) { // advance level 0 skip data
         moveToNextLevel0Block();
       }
 
@@ -1417,11 +1417,13 @@ public final class Lucene912PostingsReader extends PostingsReaderBase {
 
     @Override
     public int nextDoc() throws IOException {
-      if (doc == level0LastDocID) {
-        moveToNextLevel0Block();
-      } else if (needsRefilling) {
-        refillDocs();
-        needsRefilling = false;
+      if (docBufferUpto == BLOCK_SIZE) {
+        if (needsRefilling) {
+          refillDocs();
+          needsRefilling = false;
+        } else {
+          moveToNextLevel0Block();
+        }
       }
 
       return this.doc = (int) docBuffer[docBufferUpto++];
@@ -1644,8 +1646,9 @@ public final class Lucene912PostingsReader extends PostingsReaderBase {
 
     @Override
     public int nextDoc() throws IOException {
-      advanceShallow(doc + 1);
-      if (needsRefilling) {
+      if (docBufferUpto == BLOCK_SIZE) {
+        advanceShallow(doc + 1);
+        assert needsRefilling;
         refillDocs();
         needsRefilling = false;
       }
